--- a/pages/index.html
+++ b/pages/index.html
@@ -105,7 +105,7 @@
       <h3>Seus Pontos</h3>
       <div class="pontos-qntd">
         <p>550</p>
-        <img src="../images/estrela_dourada.png">
+        <img src="../images/estrela_dourada.png" alt="Estrela Dourada">
       </div>
     </div>
 
