--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -46,13 +46,113 @@
 <section class="hero">
     <div class="boas-vindas">
         <!-- mudar no js -->
-        <h1 id="mensagemCliente"></h1> 
+        <h1 id="mensagemCliente"></h1>
     </div>
     <div class="compre">
-        <h2>COMPRE</h2>
-        <h3>ONLINE</h3>
-        <p>Rápido e fácil</p>
-        <button>Compre Agora</button>
+        <h2>ACELERANDO NEGÓCIOS,</h2>
+        <h3>SIMPLIFICANDO CAMINHOS</h3>
+        <p>SWIFT: PORQUE O AMANHÃ NÃO ESPERA</p>
+    </div>
+    </div>
+</section>
+
+<section class="recompensas">
+    <h2>Meus Pontos & Recompensas</h2>
+
+    <!-- Pontos atuais -->
+    <div class="pontos" id="swift_club">
+        <h3>Seus Pontos</h3>
+        <div class="pontos-qntd">
+            <p>750</p>
+            <img src="../images/estrela_platina.png" alt="Estrela Platina">
+        </div>
+    </div>
+
+    <!-- Recompensas -->
+    <div class="recompensas-lista">
+        <div class="premio">
+            <img width="60" height="60" src="https://img.icons8.com/dotty/80/money.png" alt="Dinheiro"/>
+            <h4>VOUCHER DE R$200</h4>
+            <p>Troque por 650 pontos</p>
+        </div>
+
+        <div class="premio">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+            <h4>R$100,00 OFF COM NOSSOS PARCEIROS</h4>
+            <p>Troque por 550 pontos</p>
+        </div>
+
+        <div class="premio">
+            <img width="50" height="50" src="https://img.icons8.com/ios/50/loyalty-card.png" alt="Cupom" />
+            <h4>CUPOM CHURRASCO SWIFT R$50,00</h4>
+            <p>Troque por 420 pontos</p>
+        </div>
+
+        <div class="premio">
+           <img width="50" height="50" src="https://img.icons8.com/ios/50/chef-hat.png" alt="Chapéu de chef"/>
+            <h4>AULA GASTRONÔMICA (sujeito à dusponibilidade)</h4>
+            <p>Troque por 620 pontos</p>
+        </div>
+    </div>
+
+    <!-- Missões -->
+    <div class="missoes">
+        <h3>Missões Disponíveis</h3>
+        <h5>Clique na estrela para ver mais</h5>
+        <div class="animacoes">
+            <!-- quando recebe o click, faz a ação -->
+
+            <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">15 pontos</div>
+                    <div class="flip_face card_back">Venda um produto novo da loja</div>
+                </div>
+            </div>
+
+            <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">10 pontos</div>
+                    <div class="flip_face card_back">Avaliação 3 estrelas do cliente</div>
+                </div>
+            </div>
+
+             <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">15 pontos</div>
+                    <div class="flip_face card_back">Avaliação 4 estrelas do cliente</div>
+                </div>
+            </div>
+
+             <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">20 pontos</div>
+                    <div class="flip_face card_back">Avaliação 5 estrelas do cliente</div>
+                </div>
+            </div>
+
+            <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">20 pontos</div>
+                    <div class="flip_face card_back">Crie um combo personalizado para seu cliente</div>
+                </div>
+            </div>
+
+            <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">50 pontos</div>
+                    <div class="flip_face card_back">Alcance meta mensal</div>
+                </div>
+            </div>
+
+            <div class="flip_container" onclick="this.classList.toggle('clicked')">
+                <div class="flip_card">
+                    <div class="flip_face card_front">100 pontos</div>
+                    <div class="flip_face card_back">Feliz Páscoa! (venda um bacalhau)</div>
+                </div>
+            </div>
+
+
+        </div>
     </div>
     </div>
 </section>
