Fundo branco da pontuação do vendedor

--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -104,7 +104,7 @@
 
             <div class="flip_container" onclick="this.classList.toggle('clicked')">
                 <div class="flip_card">
-                    <div class="flip_face card_front">15 pontos</div>
+                    <div class="flip_face card_front">15 <br>pontos</div>
                     <div class="flip_face card_back">Venda um produto novo da loja</div>
                 </div>
             </div>
