Chat e ultimos pedidos consultor

--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -208,28 +208,31 @@
                 <a href="#">Ver mais</a>
             </div>
         </div>
-
-
     </section>
-    <!-- Chat -->
-    <div class="chat">
-        <h2>Chat com Clientes</h2>
-        <div class="chat-box">
-            <div class="msg cliente">Olá, gostaria de saber sobre a entrega.</div>
-            <div class="msg consultor">Claro, vou verificar para você!</div>
-            <div class="msg cliente">Obrigado :)</div>
-        </div>
-    </div>
 
-    <!-- Últimos Pedidos -->
-    <div class="pedidos">
-        <h2>Últimos Pedidos</h2>
-        <ul>
-            <li>Pedido #234 - Status: Enviado</li>
-            <li>Pedido #233 - Status: Processando</li>
-            <li>Pedido #232 - Status: Entregue</li>
-        </ul>
-    </div>
+    <section class="clientes">
+
+        <div class="chat">
+            <h2>Chat com último cliente</h2>
+            <div class="chat_box">
+                <h3>Marta Cavalcante</h3>
+                <div class="mensagem cliente">Olá, gostaria de saber sobre a entrega.</div>
+                <div class="mensagem consultor">Claro, vou verificar para você!</div>
+                <div class="mensagem cliente">Obrigada :)</div>
+                <a href="#">Abrir conversa</a>
+            </div>
+        </div>
+
+
+        <div class="pedidos">
+            <h2>Últimos pedidos dos seus clientes</h2>
+            <ul>
+                <li>Pedido #234 - Marta Cavalcante - Status: Enviado</li>
+                <li>Pedido #233 - José Bezerra - Status: Processando</li>
+                <li>Pedido #232 - Igor Figueredo - Status: Entregue</li>
+            </ul>
+            <a href="#">Ver mais</a>
+        </div>
 
 
 
