--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -233,11 +233,30 @@
             </ul>
             <a href="#">Ver mais</a>
         </div>
-
-
-
     </section>
 
+    <footer>
+        <div class="footer-container" id="footer">
+            <!-- Logo -->
+            <div class="footer-logo">
+                <img src="../images/IconeSwift.png" alt="footer logo">
+                <p>PREÇO BAIXO: PERFEITO PARA SEU BOLSO</p>
+            </div>
+
+            <!-- Redes sociais -->
+            <div class="footer-social">
+                <a href="https://www.facebook.com/lojaswift" target="_blank"><i class="fab fa-facebook-f"></i></a>
+                <a href="https://www.instagram.com/lojaswift" target="_blank"><i class="fab fa-instagram"></i></a>
+                <a href="https://www.youtube.com/channel/UCx_DnTAyLKfvLj5r788zXng" target="_blank"><i
+                        class="fab fa-youtube"></i></a>
+            </div>
+
+            <!-- Copy centralizado -->
+            <div class="footer-copy">
+                &copy; 2025 - Swift Club. Todos os direitos reservados.
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
