--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -22,6 +22,8 @@
             <nav class="navbar">
                 <a href="#">Home</a>
                 <a href="#swift_club">Swift Club</a>
+                <a href="#rankings">Rankings</a>
+                <a href="#clientes">Clientes</a>
                 <a href="#footer">Nossas redes</a>
             </nav>
 
@@ -157,7 +159,7 @@
         </div>
     </section>
 
-    <section class="rankings">
+    <section class="rankings" id="rankings">
 
         <div class="ranking_esquerda">
             <h2>Ranking Brasil</h2>
@@ -210,7 +212,7 @@
         </div>
     </section>
 
-    <section class="clientes">
+    <section class="clientes" id="clientes">
 
         <div class="chat">
             <h2>Chat com último cliente</h2>
