mensagem na index_consultor.html

--- a/pages/consultoralogin.html
+++ b/pages/consultoralogin.html
@@ -20,9 +20,9 @@
             <div class="secao_login">
                 <img src="../images/SwiftClub_Consultora.png" alt="Logo Swift Club Consultores">
 
-                <form class="form_login" id="formLoginConsultor">
-                    <input type="text" placeholder="Usuário Consultor" required>
-                    <input type="password" placeholder="Senha" required>
+                <form action="index_consultor.html" method="get" class="form_login" id="formLoginConsultor">
+                    <input id="nomeConsultor" name="nomeConsultor" type="text" placeholder="Usuário Consultor" required>
+                    <input type="password" name="senhaConsultor" placeholder="Senha" required>
 
                     <div class="forms_link">
                         <label>
