--- a/pages/index_consultor.html
+++ b/pages/index_consultor.html
@@ -50,7 +50,7 @@
     <section class="hero">
         <div class="boas-vindas">
             <!-- mudar no js -->
-            <h1 id="mensagemCliente"></h1>
+            <h1 id="mensagemConsultor"></h1>
         </div>
         <div class="compre">
             <h2>ACELERANDO NEGÓCIOS,</h2>
@@ -259,6 +259,7 @@
             </div>
         </div>
     </footer>
+    <script src="../js/index_consultor.js"></script>
 </body>
 
 </html>
