--- a/pages/card.html
+++ b/pages/card.html
@@ -21,11 +21,11 @@
       </a>
 
       <nav class="navbar">
-        <a href="#">Home</a>
-        <a href="#categories">Produtos</a>
-        <a href="#promotions">No Precinho</a>
-        <a href="#">Receitas</a>
-        <a href="#">Contato</a>
+        <a href="index.html">Home</a>
+        <a href="index.html#categories">Produtos</a>
+        <a href="index.html#swift_club">Swift Club</a>
+        <a href="index.html#promotions">No Precinho</a>
+        <a href="#footer">Nossas redes</a>
       </nav>
 
       <div class="icons">
@@ -86,26 +86,29 @@
     </aside>
   </main>
 
-<footer>
-  <div class="footer-container">
-      <!-- Logo -->
-    <div class="footer-logo">
-      <img src="../images/IconeSwift.png" alt="footer logo">
-    </div>
+  <div class="page-wrapper">
+    <main class="content">
 
-      <!-- Redes sociais -->
-  <div class="footer-social">
-    <a href="https://www.facebook.com/lojaswift" target="_blank"><i class="fab fa-facebook-f"></i></a>
-    <a href="https://www.instagram.com/lojaswift" target="_blank"><i class="fab fa-instagram"></i></a>
-    <a href="https://www.youtube.com/channel/UCx_DnTAyLKfvLj5r788zXng" target="_blank"><i class="fab fa-youtube"></i></a>
-  </div>
+    </main>
 
-      <!-- Copy centralizado -->
-    <div class="footer-copy">
-    &copy; 2025 - Swift Club. Todos os direitos reservados.
-    </div>
+    <footer>
+      <div class="footer-container" id="footer">
+        <div class="footer-logo">
+          <img src="../images/IconeSwift.png" alt="footer logo">
+        </div>
+
+        <div class="footer-social">
+          <a href="https://www.facebook.com/lojaswift" target="_blank"><i class="fab fa-facebook-f"></i></a>
+          <a href="https://www.instagram.com/lojaswift" target="_blank"><i class="fab fa-instagram"></i></a>
+          <a href="https://www.youtube.com/channel/UCx_DnTAyLKfvLj5r788zXng" target="_blank"><i class="fab fa-youtube"></i></a>
+        </div>
+
+        <div class="footer-copy">
+          &copy; 2025 - Swift Club. Todos os direitos reservados.
+        </div>
+      </div>
+    </footer>
   </div>
-  </footer>
 
 <script src="../js/card.js"></script>
 
