adicao do pontos no button da index.html, calculo dos pontos da card.js e index.js

--- a/pages/index.html
+++ b/pages/index.html
@@ -210,7 +210,8 @@
         <img src="../promocoes/carne.png" alt="Pichanha">
         <h3>Picanha 1kg</h3>
         <div class="price">R$95,90 <span>R$107,90</span></div>
-        <button class="add-to-cart" data-name="Picanha 1kg" data-price="95.90" data-image="../promocoes/carne.png">
+        <button class="add-to-cart" data-name="Picanha 1kg" data-price="95.90" data-points="800" 
+          data-image="../promocoes/carne.png">
           Adicione ao carrinho
         </button>
       </div>
@@ -219,7 +220,7 @@
         <img src="../promocoes/linguica_toscana.jpg" alt="Linguiça Toscana">
         <h3>Linguiça Toscana 700g</h3>
         <div class="price">R$15,00 <span>R$17,90</span></div>
-        <button class="add-to-cart" data-name="Linguiça Toscana 700g" data-price="15.00"
+        <button class="add-to-cart" data-name="Linguiça Toscana 700g" data-price="15.00" data-points="300"
           data-image="../promocoes/linguica_toscana.jpg">
           Adicione ao carrinho
         </button>
@@ -229,7 +230,7 @@
         <img src="../promocoes/fila_peito.jpg" alt="Filé de Peito de Frango">
         <h3>Filé de Peito Linha Mais 1kg</h3>
         <div class="price">R$20,90 <span>R$22,90</span></div>
-        <button class="add-to-cart" data-name="Filé de Peito Linha Mais 1kg" data-price="20.90"
+        <button class="add-to-cart" data-name="Filé de Peito Linha Mais 1kg" data-price="20.90" data-points="400"
           data-image="../promocoes/fila_peito.jpg">
           Adicione ao carrinho
         </button>
@@ -239,7 +240,7 @@
         <img src="../promocoes/salmao.jpg" alt="Filé de Salmão">
         <h3>Filé de Salmão 500g</h3>
         <div class="price">R$40,90 <span>R$49,90</span></div>
-        <button class="add-to-cart" data-name="Filé de Salmão 500g" data-price="40.90"
+        <button class="add-to-cart" data-name="Filé de Salmão 500g" data-price="40.90" data-points="900"
           data-image="../promocoes/salmao.jpg">
           Adicione ao carrinho
         </button>
@@ -249,7 +250,7 @@
         <img src="../promocoes/farofa.jpg" alt="Farofa">
         <h3>Farofa Tradicional 400g</h3>
         <div class="price">R$9,90 <span>R$11,90</span></div>
-        <button class="add-to-cart" data-name="Farofa Tradicional 400g" data-price="9.90"
+        <button class="add-to-cart" data-name="Farofa Tradicional 400g" data-price="9.90" data-points="620"
           data-image="../promocoes/farofa.jpg">
           Adicione ao carrinho
         </button>
