index.html alteracao nas tags para adicionar valor dos pontos

--- a/pages/index.html
+++ b/pages/index.html
@@ -209,7 +209,7 @@
       <div class="box">
         <img src="../promocoes/carne.png" alt="Pichanha">
         <h3>Picanha 1kg</h3>
-        <div class="price">R$95,90 <span>R$107,90</span></div>
+        <div class="price">R$95,90 ou 800 pontos<span>R$107,90</span></div>
         <button class="add-to-cart" data-name="Picanha 1kg" data-price="95.90" data-points="800" 
           data-image="../promocoes/carne.png">
           Adicione ao carrinho
@@ -219,7 +219,7 @@
       <div class="box">
         <img src="../promocoes/linguica_toscana.jpg" alt="Linguiça Toscana">
         <h3>Linguiça Toscana 700g</h3>
-        <div class="price">R$15,00 <span>R$17,90</span></div>
+        <div class="price">R$15,00 ou 300 pontos<span>R$17,90</span></div>
         <button class="add-to-cart" data-name="Linguiça Toscana 700g" data-price="15.00" data-points="300"
           data-image="../promocoes/linguica_toscana.jpg">
           Adicione ao carrinho
@@ -229,7 +229,7 @@
       <div class="box">
         <img src="../promocoes/fila_peito.jpg" alt="Filé de Peito de Frango">
         <h3>Filé de Peito Linha Mais 1kg</h3>
-        <div class="price">R$20,90 <span>R$22,90</span></div>
+        <div class="price">R$20,90 ou 400 pontos<span>R$22,90</span></div>
         <button class="add-to-cart" data-name="Filé de Peito Linha Mais 1kg" data-price="20.90" data-points="400"
           data-image="../promocoes/fila_peito.jpg">
           Adicione ao carrinho
@@ -239,7 +239,7 @@
       <div class="box">
         <img src="../promocoes/salmao.jpg" alt="Filé de Salmão">
         <h3>Filé de Salmão 500g</h3>
-        <div class="price">R$40,90 <span>R$49,90</span></div>
+        <div class="price">R$40,90 ou 900 pontos<span>R$49,90</span></div>
         <button class="add-to-cart" data-name="Filé de Salmão 500g" data-price="40.90" data-points="900"
           data-image="../promocoes/salmao.jpg">
           Adicione ao carrinho
@@ -249,7 +249,7 @@
       <div class="box">
         <img src="../promocoes/farofa.jpg" alt="Farofa">
         <h3>Farofa Tradicional 400g</h3>
-        <div class="price">R$9,90 <span>R$11,90</span></div>
+        <div class="price">R$9,90 ou 620 pontos<span>R$11,90</span></div>
         <button class="add-to-cart" data-name="Farofa Tradicional 400g" data-price="9.90" data-points="620"
           data-image="../promocoes/farofa.jpg">
           Adicione ao carrinho
@@ -268,8 +268,8 @@
       <div class="box">
         <img src="../bestSellers/fileMignon.jpg" alt="Filé Mignon">
         <h3>Filé Mignon em Bifes 1kg</h3>
-        <div class="price">R$95,90</div>
-        <button class="add-to-cart" data-name="Filé Mignon em Bifes 1kg" data-price="95.90"
+        <div class="price">R$95,90 ou 1100 pontos</div>
+        <button class="add-to-cart" data-name="Filé Mignon em Bifes 1kg" data-price="95.90" data-points="1100"
           data-image="../bestSellers/fileMignon.jpg">
           Adicione ao carrinho
         </button>
@@ -278,8 +278,8 @@
       <div class="box">
         <img src="../bestSellers/hamburguerBovino.jpg" alt="Hambúrguer Bovino">
         <h3>Hambúrguer Bovino</h3>
-        <div class="price">R$15,00</div>
-        <button class="add-to-cart" data-name="Hambúrguer Bovino" data-price="15.00"
+        <div class="price">R$15,00 ou 600 pontos</div>
+        <button class="add-to-cart" data-name="Hambúrguer Bovino" data-price="15.00" data-points="600"
           data-image="../bestSellers/hamburguerBovino.jpg">
           Adicione ao carrinho
         </button>
@@ -288,8 +288,8 @@
       <div class="box">
         <img src="../bestSellers/picanha.jpg" alt="Picanha Fatiada">
         <h3>Picanha Fatiada 1kg</h3>
-        <div class="price">R$89,90</div>
-        <button class="add-to-cart" data-name="Picanha Fatiada 1kg" data-price="89.90"
+        <div class="price">R$89,90 ou 500 pontos</div>
+        <button class="add-to-cart" data-name="Picanha Fatiada 1kg" data-price="89.90" data-points="500"
           data-image="../bestSellers/picanha.jpg">
           Adicione ao carrinho
         </button>
@@ -298,8 +298,8 @@
       <div class="box">
         <img src="../bestSellers/picanhaPeca.jpg" alt="Picanha Peça">
         <h3>Picanha Peça</h3>
-        <div class="price">R$120,90</div>
-        <button class="add-to-cart" data-name="Picanha Peça" data-price="120.90"
+        <div class="price">R$120,90 ou 800 pontos</div>
+        <button class="add-to-cart" data-name="Picanha Peça" data-price="120.90" data-points="800"
           data-image="../bestSellers/picanhaPeca.jpg">
           Adicione ao carrinho
         </button>
@@ -308,8 +308,8 @@
       <div class="box">
         <img src="../bestSellers/salmao.jpg" alt="Salmão Premium">
         <h3>Salmão Premium 500g</h3>
-        <div class="price">R$9,90</div>
-        <button class="add-to-cart" data-name="Salmão Premium 500g" data-price="9.90"
+        <div class="price">R$9,90 ou 1200 pontos</div>
+        <button class="add-to-cart" data-name="Salmão Premium 500g" data-price="9.90" data-points="1200"
           data-image="../bestSellers/salmao.jpg">
           Adicione ao carrinho
         </button>
@@ -326,8 +326,8 @@
       <div class="box">
         <img src="../embalados/embaladosBisteca.jpg" alt="Bisteca">
         <h3>Bisteca 1kg</h3>
-        <div class="price">R$95,90</div>
-        <button class="add-to-cart" data-name="Bisteca 1kg" data-price="95.90"
+        <div class="price">R$95,90 ou 350 pontos</div>
+        <button class="add-to-cart" data-name="Bisteca 1kg" data-price="95.90" data-points="350"
           data-image="../embalados/embaladosBisteca.jpg">
           Adicione ao carrinho
         </button>
@@ -336,8 +336,8 @@
       <div class="box">
         <img src="../embalados/embaladosCoracao.jpg" alt="Coracao">
         <h3>Coração 1kg</h3>
-        <div class="price">R$15,00</div>
-        <button class="add-to-cart" data-name="Coração 1kg" data-price="15.00"
+        <div class="price">R$15,00 ou 200 pontos</div>
+        <button class="add-to-cart" data-name="Coração 1kg" data-price="15.00" data-points="200"
           data-image="../embalados/embaladosCoracao.jpg">
           Adicione ao carrinho
         </button>
@@ -346,8 +346,8 @@
       <div class="box">
         <img src="../embalados/embaladosCoxaDeAasa.jpg" alt="CoxaDeAsa">
         <h3>Coxa de Asa 1kg</h3>
-        <div class="price">R$20,90</div>
-        <button class="add-to-cart" data-name="Coxa de Asa 1kg" data-price="20.90"
+        <div class="price">R$20,90 ou 350 pontos</div>
+        <button class="add-to-cart" data-name="Coxa de Asa 1kg" data-price="20.90" data-points="350"
           data-image="../embalados/embaladosCoxaDeAasa.jpg">
           Adicione ao carrinho
         </button>
@@ -356,8 +356,8 @@
       <div class="box">
         <img src="../embalados/embaladosFileDePeito.jpg" alt="FileDePeito">
         <h3>Filé De Peito 1kg</h3>
-        <div class="price">R$40,90</div>
-        <button class="add-to-cart" data-name="Filé De Peito 1kg" data-price="40.90"
+        <div class="price">R$40,90 ou 250 pontos</div>
+        <button class="add-to-cart" data-name="Filé De Peito 1kg" data-price="40.90"  data-points="250"
           data-image="../embalados/embaladosFileDePeito.jpg">
           Adicione ao carrinho
         </button>
@@ -366,8 +366,8 @@
       <div class="box">
         <img src="../embalados/embaladosLinguiça.jpg" alt="Linguiça">
         <h3>Linguiça 1kg</h3>
-        <div class="price">R$9,90</div>
-        <button class="add-to-cart" data-name="Linguiça 1kg" data-price="9.90"
+        <div class="price">R$9,90 ou 600 pontos</div>
+        <button class="add-to-cart" data-name="Linguiça 1kg" data-price="9.90" data-points="600"
           data-image="../embalados/embaladosLinguiça.jpg">
           Adicione ao carrinho
         </button>
