--- a/pages/index.html
+++ b/pages/index.html
@@ -209,8 +209,8 @@
       <div class="box">
         <img src="../promocoes/carne.png" alt="Pichanha">
         <h3>Picanha 1kg</h3>
-        <div class="price">R$95,90 ou 800 pontos<span>R$107,90</span></div>
-        <button class="add-to-cart" data-name="Picanha 1kg" data-price="95.90" data-points="800" 
+        <div class="price">R$95,90<span>R$107,90</span></div>
+        <button class="add-to-cart" data-name="Picanha 1kg" data-price="95.90" 
           data-image="../promocoes/carne.png">
           Adicione ao carrinho
         </button>
@@ -219,8 +219,8 @@
       <div class="box">
         <img src="../promocoes/linguica_toscana.jpg" alt="Linguiça Toscana">
         <h3>Linguiça Toscana 700g</h3>
-        <div class="price">R$15,00 ou 300 pontos<span>R$17,90</span></div>
-        <button class="add-to-cart" data-name="Linguiça Toscana 700g" data-price="15.00" data-points="300"
+        <div class="price">R$15,00<span>R$17,90</span></div>
+        <button class="add-to-cart" data-name="Linguiça Toscana 700g" data-price="15.00"
           data-image="../promocoes/linguica_toscana.jpg">
           Adicione ao carrinho
         </button>
@@ -229,8 +229,8 @@
       <div class="box">
         <img src="../promocoes/fila_peito.jpg" alt="Filé de Peito de Frango">
         <h3>Filé de Peito Linha Mais 1kg</h3>
-        <div class="price">R$20,90 ou 400 pontos<span>R$22,90</span></div>
-        <button class="add-to-cart" data-name="Filé de Peito Linha Mais 1kg" data-price="20.90" data-points="400"
+        <div class="price">R$20,90<span>R$22,90</span></div>
+        <button class="add-to-cart" data-name="Filé de Peito Linha Mais 1kg" data-price="20.90" 
           data-image="../promocoes/fila_peito.jpg">
           Adicione ao carrinho
         </button>
@@ -239,8 +239,8 @@
       <div class="box">
         <img src="../promocoes/salmao.jpg" alt="Filé de Salmão">
         <h3>Filé de Salmão 500g</h3>
-        <div class="price">R$40,90 ou 900 pontos<span>R$49,90</span></div>
-        <button class="add-to-cart" data-name="Filé de Salmão 500g" data-price="40.90" data-points="900"
+        <div class="price">R$40,90<span>R$49,90</span></div>
+        <button class="add-to-cart" data-name="Filé de Salmão 500g" data-price="40.90" 
           data-image="../promocoes/salmao.jpg">
           Adicione ao carrinho
         </button>
@@ -249,8 +249,8 @@
       <div class="box">
         <img src="../promocoes/farofa.jpg" alt="Farofa">
         <h3>Farofa Tradicional 400g</h3>
-        <div class="price">R$9,90 ou 620 pontos<span>R$11,90</span></div>
-        <button class="add-to-cart" data-name="Farofa Tradicional 400g" data-price="9.90" data-points="620"
+        <div class="price">R$9,90<span>R$11,90</span></div>
+        <button class="add-to-cart" data-name="Farofa Tradicional 400g" data-price="9.90" 
           data-image="../promocoes/farofa.jpg">
           Adicione ao carrinho
         </button>
